--- a/SINISTREAT_Build/pom.xml
+++ b/SINISTREAT_Build/pom.xml
@@ -19,6 +19,7 @@
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
+						<propertiesEncoding>UTF-8</propertiesEncoding>
 					</configuration>
 				</plugin>
 			</plugins>
